--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -1,1 +1,34 @@
-<p>login works!</p>
+<div class="containerr">
+  <form class="form-signin" (ngSubmit)="login()" [formGroup]="loginForm">
+    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+
+    <div class="form-group">
+      <label for="inputEmail" class="sr-only">Email address</label>
+      <input type="email"
+             id="inputEmail"
+             class="form-control"
+             placeholder="Email address"
+             autofocus
+             formControlName="email">
+    </div>
+
+    <div class="form-group">
+      <label for="inputPassword" class="sr-only">Password</label>
+      <input type="password"
+             id="inputPassword"
+             class="form-control"
+             placeholder="Password"
+             formControlName="password">
+    </div>
+
+    <div class="checkbox mb-3">
+      <label>
+        <input type="checkbox" value="remember-me"> Remember me
+      </label>
+    </div>
+    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+    <p>Don't have an account? <a routerLink="../register">Register</a></p>
+
+  </form>
+
+</div>
