--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div class="row">
-  <div class="col-3">
+  <div class="col d-flex">
+
     <app-sidebar></app-sidebar>
-  </div>
-  <div class="col">
+
     <router-outlet></router-outlet>
   </div>
 </div>
