--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,5 +1,71 @@
-<div class="row">
-  <div class="col-3">
-    <p>sidebar works!</p>
+<div class="row sidebar"
+     *ngIf="sidebarOpen">
+
+  <div class="sidebar" [class.open]="sidebarOpen">
+    <div class="col-3">
+
+      <button class="btn btn-primary"
+              type="button"
+              (click)="toggleSidebar()">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x"
+             viewBox="0 0 16 16">
+          <path fill-rule="evenodd"
+                d="M13.854 1.646a.5.5 0 0 1 0 .708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854a.5.5 0 0 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708 0z"/>
+        </svg>
+      </button>
+
+      <div class="sidebar-header d-flex">
+        <h3>Menu</h3>
+      </div>
+      <ul class="list-unstyled components">
+        <li>
+          <a href="#">Home</a>
+        </li>
+        <li>
+          <a href="#">About</a>
+        </li>
+        <li>
+          <a href="#">Services</a>
+        </li>
+        <li>
+          <a href="#">Portfolio</a>
+        </li>
+        <li>
+          <a href="#">Contact</a>
+        </li>
+      </ul>
+    </div>
   </div>
+</div>
+
+
+<div class="toggle-sidebar d-flex flex-column"
+     *ngIf="!sidebarOpen">
+  <button class="btn btn-primary"
+          type="button"
+          (click)="toggleSidebar()">
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list"
+         viewBox="0 0 16 16">
+      <path fill-rule="evenodd"
+            d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
+    </svg>
+  </button>
+
+  <button class="btn btn-primary mt-1"
+          type="button"
+          (click)="toggleSidebar()">
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x"
+         viewBox="0 0 16 16">
+      <path fill-rule="evenodd"
+            d="M13.854 1.646a.5.5 0 0 1 0 .708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854a.5.5 0 0 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708 0z"/>
+    </svg>
+  </button>
+
+  <button class="btn btn-primary mt-1"
+          type="button"
+          (click)="toggleSidebar()">
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house" viewBox="0 0 16 16">
+      <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.707 1.5ZM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5 5 5Z"/>
+    </svg>
+  </button>
 </div>
