--- a/src/app/traillers/pages/home/home.component.html
+++ b/src/app/traillers/pages/home/home.component.html
@@ -1,1 +1,16 @@
-<p>home works!</p>
+<div class="row">
+  <div class="col d-flex">
+    <app-sidebar></app-sidebar>
+
+    <div class="hero">
+      <h1 class="title">The title of the page</h1>
+      <div class="content">
+        <p>Some content</p>
+      </div>
+      <div class="footer">
+        <p>Some footer</p>
+    </div>
+    </div>
+  </div>
+
+</div>
