--- a/src/app/shared/sidebar/sidebar.component.css
+++ b/src/app/shared/sidebar/sidebar.component.css
@@ -5,3 +5,50 @@
   padding: 0;
   width: 100%;
 }
+
+.sidebar{
+  background-color: #fff;
+  border-right: 1px solid #ccc;
+  height: 100%;
+  padding: 0;
+  width: 200px;
+}
+
+.sidebar ul{
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.sidebar li{
+  border-bottom: 1px solid #ccc;
+  padding: 10px;
+}
+
+.sidebar li:last-child{
+  border-bottom: none;
+}
+
+.sidebar li a{
+  color: #000;
+  display: block;
+  text-decoration: none;
+}
+
+.sidebar li a:hover{
+  color: #fff;
+  background-color: #000;
+}
+
+.toggle-sidebar{
+  color: #fff;
+  cursor: pointer;
+  display: block;
+  padding: 10px;
+  text-align: center;
+  text-decoration: none;
+  height: 100%;
+  background-color: #f5f5f5;
+  border-radius: 5px;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+}
