--- a/src/app/shared/sidebar/sidebar.component.css
+++ b/src/app/shared/sidebar/sidebar.component.css
@@ -45,9 +45,10 @@
   cursor: pointer;
   display: block;
   padding: 10px;
+  position: fixed;
   text-align: center;
   text-decoration: none;
-  height: 100%;
+  height: 800px;
   background-color: #f5f5f5;
   border-radius: 5px;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
