--- a/src/app/traillers/pages/home/home.component.css
+++ b/src/app/traillers/pages/home/home.component.css
@@ -7,6 +7,93 @@
   height: 600px;
   width: 100%;
 }
+.carousel{
+  background-color: #f5f5f5;
+  padding: 20px;
+  border-radius: 5px;
+  margin: 20px;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+  height: 600px;
+  width: 100%;
+}
+.container{
+  padding: 20px;
+  height: 600px;
+  width: 100%;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
 
+.hero-login {
+  background-color: #f5f5f5;
+  padding: 20px;
+  border-radius: 5px;
+  margin: 20px;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+  height: 600px;
+  width: 100%;
+  align-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+}
+
+.hero-login h1{
+  color: #000;
+  font-size: 30px;
+  font-weight: 700;
+  padding: 0;
+  text-align: center;
+  margin: 20px 0 0;
+}
+
+
+
+.hero-login .login button {
+  background-color: #f5f5f5;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 10px;
+  margin: 10px;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+}
+
+.hero-login .login button:hover {
+  background-color: #ccc;
+}
+
+
+.hero-login .register button {
+  background-color: #f5f5f5;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 10px;
+  margin: 10px;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+}
+
+.hero-login .register button:hover {
+  background-color: #ccc;
+}
+
+.hero-login input {
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 10px;
+  margin: 10px;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+}
+
+.hero-login input:hover {
+  background-color: #ccc;
+}
+
+app-sidebar{
+  margin-right: 50px !important;
+}
 
 
