--- a/src/app/traillers/components/carousel/carousel.component.css
+++ b/src/app/traillers/components/carousel/carousel.component.css
@@ -1,5 +1,31 @@
-.carousel {
-  overflow: hidden;
-  background-color: #000;
+.video-carousel-container {
+  width: 100%;
+  /*height: 400px;*/
+  overflow-x: scroll;
   display: flex;
+  flex-wrap: nowrap;
+  -webkit-overflow-scrolling: touch;
+}
+
+.video-carousel {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  white-space: nowrap;
+  margin: 0;
+  padding: 0;
+}
+
+.video-container {
+  margin: 0 20px;
+  text-align: center;
+  display: inline-block;
+}
+
+/*.video-container iframe {*/
+/*  max-width: 100%;*/
+/*}*/
+
+.video-container h4 {
+  margin-top: 10px;
 }
