--- a/src/app/traillers/components/carousel/carousel.component.html
+++ b/src/app/traillers/components/carousel/carousel.component.html
@@ -2,11 +2,15 @@
 <div class="container">
   <h1>{{category.category}}</h1>
 
-  <div class="card-deck">
-    <div class="carousel" *ngFor="let movies of category.trailers">
-      <iframe width="360" height="215" [src]="movies.link | safe"
-              allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <div class="video-carousel-container">
+    <div class="video-carousel">
+      <div class="video-container" *ngFor="let video of category.trailers">
+        <iframe width="360" height="215" [src]="video.link | safe" frameborder="0" allow="autoplay; encrypted-media"
+                allowfullscreen></iframe>
+
+      </div>
     </div>
   </div>
+
 
 </div>
