--- a/src/styles.css
+++ b/src/styles.css
@@ -4,5 +4,5 @@ html, body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
   overflow-x: hidden; /* Hide horizontal scrollbar */
-
+  scroll-behavior: smooth;
 }
