--- a/src/app/traillers/components/carousel/carousel.component.css
+++ b/src/app/traillers/components/carousel/carousel.component.css
@@ -7,6 +7,10 @@
   -webkit-overflow-scrolling: touch;
 }
 
+::-webkit-scrollbar {
+  display: none;
+}
+
 .video-carousel {
   display: flex;
   justify-content: center;
