--- a/src/app/traillers/pages/home/home.component.css
+++ b/src/app/traillers/pages/home/home.component.css
@@ -22,12 +22,14 @@
   width: 100%;
   align-items: center;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
 }
 
 .hero-login {
-  background-color: #f5f5f5;
+  background: #8E0E00;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to bottom, #1F1C18, #8E0E00);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to bottom, #1F1C18, #8E0E00);
   padding: 20px;
   border-radius: 5px;
   margin: 20px;
@@ -43,7 +45,7 @@
 }
 
 .hero-login h1{
-  color: #000;
+  color: white;
   font-size: 30px;
   font-weight: 700;
   padding: 0;
