--- a/src/app/shared/sidebar/sidebar.component.css
+++ b/src/app/shared/sidebar/sidebar.component.css
@@ -7,7 +7,10 @@
 }
 
 .sidebar{
-  background-color: #fff;
+  background: #C33764;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to bottom, #1D2671, #C33764);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to bottom, #1D2671, #C33764); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
   border-right: 1px solid #ccc;
   height: 100%;
   padding: 0;
@@ -43,6 +46,10 @@
 }
 
 .toggle-sidebar{
+  background: #C33764;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to bottom, #1D2671, #C33764);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to bottom, #1D2671, #C33764); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
   color: #fff;
   cursor: pointer;
   display: block;
@@ -52,6 +59,6 @@
   text-decoration: none;
   height: 800px;
   background-color: #f5f5f5;
-  border-radius: 5px;
-  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+  /*border-radius: 5px;*/
+  /*box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);*/
 }
