--- a/src/app/traillers/components/carousel/carousel.component.css
+++ b/src/app/traillers/components/carousel/carousel.component.css
@@ -1,10 +1,10 @@
 .video-carousel-container {
   width: 100%;
   /*height: 400px;*/
-  overflow-x: scroll;
+  overflow-x: unset;
   display: flex;
   flex-wrap: nowrap;
-  -webkit-overflow-scrolling: touch;
+  -webkit-overflow-scrolling: auto;
 }
 
 ::-webkit-scrollbar {
