--- a/src/app/traillers/components/carousel/carousel.component.css
+++ b/src/app/traillers/components/carousel/carousel.component.css
@@ -1,7 +1,7 @@
 .video-carousel-container {
   width: 100%;
   /*height: 400px;*/
-  overflow-x: unset;
+  overflow-x: scroll;
   display: flex;
   flex-wrap: nowrap;
   -webkit-overflow-scrolling: auto;
