--- a/src/app/traillers/pages/home/home.component.html
+++ b/src/app/traillers/pages/home/home.component.html
@@ -34,8 +34,8 @@
           <div class="card-header">
             <h3 class="card-title">Movies</h3>
           </div>
-          <div class="card-body carousel-list" *ngFor="let category of categories">
-            <app-carousel [category]="category"></app-carousel>
+          <div class="card-body carousel-list">
+            <app-carousel [trailer]="categories"></app-carousel>
           </div>
         </div>
       </div>
