--- a/src/app/traillers/pages/listado/listado.component.html
+++ b/src/app/traillers/pages/listado/listado.component.html
@@ -12,14 +12,14 @@
             autofocus>
 
     <div class="row row-cols-3" *ngFor="let trailer of traillers">
-      <div *ngFor="let t of trailer.trailers">
+      <div>
         <div class="col-lg-3 col-md-4 col-sm-5 col-6 col rounded me-3">
-          <iframe width="360" height="215" [src]="t.link | safe" frameborder="0"
+          <iframe width="360" height="215" [src]="trailer.link | safe" frameborder="0"
                   allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                   allowfullscreen></iframe>
           <h4 class="d-flex">
-            <span class="badge ">{{t.title}}</span>
-            <small class="mt-1 text-muted">{{t.category}}</small>
+            <span class="badge ">{{trailer.titulo}}</span>
+            <small class="mt-1 text-muted">{{trailer.category}}</small>
           </h4>
         </div>
 
