--- a/src/app/traillers/components/carousel/carousel.component.css
+++ b/src/app/traillers/components/carousel/carousel.component.css
@@ -33,3 +33,28 @@
 .video-container h4 {
   margin-top: 10px;
 }
+
+/*en la siguiente clases hay una img y un p,
+* superponerlos para que se vea el texto en la imagen*/
+.vid-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.vid-container p {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+
