--- a/src/app/traillers/components/carousel/carousel.component.html
+++ b/src/app/traillers/components/carousel/carousel.component.html
@@ -5,7 +5,15 @@
   <div class="video-carousel-container">
     <div class="video-carousel">
       <div class="video-container" *ngFor="let video of trailer.trailer; let x =  index">
-          <img width="360" height="215" [src]="video.img | safe" [alt]="video.titulo">
+          <div class="vid-container"
+               routerLink="../detail/{{video.id}}">
+            <img class="rounded"
+                 routerLink="../detail/{{video.id}}"
+                 width="360" height="215"
+                 [src]="video.img | safe"
+                 [alt]="video.titulo">
+            <p routerLink="../detail/{{video.id}}" class="text-center">{{video.titulo}}</p>
+          </div>
       </div>
     </div>
   </div>
