--- a/src/app/traillers/components/carousel/carousel.component.css
+++ b/src/app/traillers/components/carousel/carousel.component.css
@@ -58,3 +58,9 @@
 }
 
 
+.container{
+  background: #ffffff;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
+  margin-bottom: 10px;
+  padding-bottom: 10px;
+}
