--- a/src/app/traillers/pages/home/home.component.html
+++ b/src/app/traillers/pages/home/home.component.html
@@ -30,8 +30,8 @@
       </div>
 
       <div class="mt-5 carousel">
-        <div class="card">
-          <div class="card-header">
+
+          <div class="">
             <h3 class="card-title">Movies</h3>
           </div>
           <div class="card-body carousel-list" *ngFor="let cate of categories">
@@ -39,7 +39,7 @@
 
           </div>
         </div>
-      </div>
+
 
 
     </div>
