nueva interfaz y codigo movido

--- a/src/app/traillers/pages/home/home.component.html
+++ b/src/app/traillers/pages/home/home.component.html
@@ -20,25 +20,9 @@
       </div>
 
       <div class="hero">
-        <h1 class="title">The title of the page</h1>
-        <div class="content">
-          <p>Some content</p>
-        </div>
-        <div class="footer">
-          <p>Some footer</p>
-        </div>
+        <button routerLink="../traillers">Trailers</button>
       </div>
 
-      <div class="mt-5 carousel">
-
-          <div class="">
-            <h3 class="card-title">Movies</h3>
-          </div>
-          <div class="card-body carousel-list" *ngFor="let cate of categories">
-            <app-carousel [trailer]="cate"></app-carousel>
-
-          </div>
-        </div>
 
 
 
