--- a/src/app/traillers/pages/home/home.component.css
+++ b/src/app/traillers/pages/home/home.component.css
@@ -7,6 +7,23 @@
   height: 600px;
   width: 100%;
 }
+.carousel{
+  background-color: #f5f5f5;
+  padding: 20px;
+  border-radius: 5px;
+  margin: 20px;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+  height: 600px;
+  width: 100%;
+}
+
+.view-more{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px;
+
+}
 .container{
   padding: 20px;
   height: 600px;
