--- a/src/app/traillers/pages/home/home.component.html
+++ b/src/app/traillers/pages/home/home.component.html
@@ -19,37 +19,31 @@
 
       </div>
 
-      <div class="hero">
-        <h1>
+      <div class="mt-5 carousel">
+
+        <h3>
           Trailers
-        </h1>
-        <div class="mt-5 carousel">
+        </h3>
 
-          <div class="">
-            <h3 class="card-title">Movies</h3>
-          </div>
-          <div class="card-body carousel-list">
-            <app-carousel [trailer]="categories[0]"></app-carousel>
+        <div class="container-fluid">
+          <app-carousel [trailer]="categories[0]"></app-carousel>
+        </div>
 
-          </div>
 
-          <div class="view-more">
-            <button routerLink="../traillers"
-              class="btn btn-primary btn-lg btn-block">
-              View More
-            </button>
-          </div>
-
+        <div class="view-more">
+          <button routerLink="../traillers"
+                  class="btn btn-primary btn-lg btn-block">
+            View More
+          </button>
         </div>
 
       </div>
 
-
-
-
-
     </div>
+
+
   </div>
+
 
 </div>
 
