--- a/src/app/traillers/components/carousel/carousel.component.css
+++ b/src/app/traillers/components/carousel/carousel.component.css
@@ -7,6 +7,13 @@
   -webkit-overflow-scrolling: auto;
 }
 
+.container{
+;
+  align-content: center;
+  justify-content: center;
+
+}
+
 ::-webkit-scrollbar {
   display: none;
 }
