nav bar arreglada

--- a/src/app/traillers/pages/home/home.component.html
+++ b/src/app/traillers/pages/home/home.component.html
@@ -1,6 +1,6 @@
+<app-sidebar [style]="{ 'position': 'sticky', 'width': '100%'}"></app-sidebar>
 <div class="row">
   <div class="col d-flex">
-    <app-sidebar></app-sidebar>
 
     <div class="col">
 
