--- a/src/app/traillers/pages/listado/listado.component.html
+++ b/src/app/traillers/pages/listado/listado.component.html
@@ -1,3 +1,4 @@
+<app-sidebar [style]="{ 'position': 'sticky', 'width': '100%'}"></app-sidebar>
 <div class="row container-fluid">
   <div class="col">
     <h1>
