--- a/src/app/traillers/pages/home/home.component.css
+++ b/src/app/traillers/pages/home/home.component.css
@@ -38,7 +38,7 @@
   background: #8E0E00;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to bottom, #1F1C18, #8E0E00);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to bottom, #1F1C18, #8E0E00);
-  padding: 20px;
+  /*padding: 20px;*/
   border-radius: 5px;
   /*margin: 20px;*/
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
@@ -102,8 +102,5 @@
   background-color: #ccc;
 }
 
-app-sidebar{
-  margin-right: 50px !important;
-}
 
 
