--- a/src/app/shared/sidebar/sidebar.component.css
+++ b/src/app/shared/sidebar/sidebar.component.css
@@ -1,64 +1,16 @@
-.row{
-  border: 1px solid #ccc;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  width: 100%;
+.navbar-brand:hover{
+  animation: bounce  2s linear infinite;
+  transition: all 0.5s ease-in-out;
 }
 
-.sidebar{
-  background: #C33764;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to bottom, #1D2671, #C33764);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to bottom, #1D2671, #C33764); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-  border-right: 1px solid #ccc;
-  height: 100%;
-  padding: 0;
-  position: fixed;
-  z-index: 1;
-  width: 200px;
-}
-
-.sidebar ul{
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-
-.sidebar li{
-  border-bottom: 1px solid #ccc;
-  padding: 10px;
-}
-
-.sidebar li:last-child{
-  border-bottom: none;
-}
-
-.sidebar li a{
-  color: #000;
-  display: block;
-  text-decoration: none;
-}
-
-.sidebar li a:hover{
-  color: #fff;
-  background-color: #000;
-}
-
-.toggle-sidebar{
-  background: #C33764;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to bottom, #1D2671, #C33764);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to bottom, #1D2671, #C33764); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
-  color: #fff;
-  cursor: pointer;
-  display: block;
-  padding: 10px;
-  position: fixed;
-  text-align: center;
-  text-decoration: none;
-  height: 800px;
-  background-color: #f5f5f5;
-  /*border-radius: 5px;*/
-  /*box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);*/
+@keyframes bounce {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-10px);
+  }
+  100% {
+    transform: translateY(0);
+  }
 }
