--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -20,7 +20,7 @@
         <!--        account-->
         <button class="btn btn-outline-light"
                 type="button">
-          <i class="fa fa-user"></i>
+          <i class="bi bi-person-circle"></i>
           Account
         </button>
       </div>
