--- a/src/app/traillers/pages/home/home.component.css
+++ b/src/app/traillers/pages/home/home.component.css
@@ -8,13 +8,23 @@
 /*  width: 100%;*/
 /*}*/
 .carousel{
-  background-color: #f5f5f5;
-  padding: 20px;
-  border-radius: 5px;
-  margin: 20px;
+  background: linear-gradient(to bottom, #FF0000, #000000);
+  /*padding: 20px;*/
+  /*border-radius: 5px;*/
+  /*margin: 20px;*/
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+  height: 100%;
+  width: 100%;
+}
+
+.carousel .container{
+  padding: 20px;
   height: 600px;
   width: 100%;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .view-more{
@@ -35,11 +45,9 @@
 }
 
 .hero-login {
-  background: #8E0E00;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to bottom, #1F1C18, #8E0E00);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to bottom, #1F1C18, #8E0E00);
+  background: linear-gradient(to bottom, #000080, #4B0082);
   /*padding: 20px;*/
-  border-radius: 5px;
+  /*border-radius: 5px;*/
   /*margin: 20px;*/
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
   height: 600px;
