--- a/src/app/traillers/components/carousel/carousel.component.css
+++ b/src/app/traillers/components/carousel/carousel.component.css
@@ -1,21 +1,32 @@
 .video-carousel-container {
+  position: relative;
   width: 100%;
-  /*height: 400px;*/
   overflow-x: scroll;
   display: flex;
   flex-wrap: nowrap;
   -webkit-overflow-scrolling: auto;
 }
 
-.container{
-;
-  align-content: center;
-  justify-content: center;
-
+.carousel-btn {
+  position: sticky;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 50px;
+  height: 50px;
+  border: none;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.83);
+  z-index: 1;
+  font-size: 2rem;
+  cursor: pointer;
 }
 
-::-webkit-scrollbar {
-  display: none;
+.prev-btn {
+  left: 0;
+}
+
+.next-btn {
+  right: 0;
 }
 
 .video-carousel {
@@ -33,16 +44,6 @@
   display: inline-block;
 }
 
-/*.video-container iframe {*/
-/*  max-width: 100%;*/
-/*}*/
-
-.video-container h4 {
-  margin-top: 10px;
-}
-
-/*en la siguiente clases hay una img y un p,
-* superponerlos para que se vea el texto en la imagen*/
 .vid-container {
   position: relative;
   width: 100%;
@@ -55,7 +56,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5);
+  background: transparent;
   color: #fff;
   display: flex;
   justify-content: center;
@@ -64,9 +65,8 @@
   font-weight: bold;
 }
 
-
 .container{
-  background: #ffffff;
+  background: transparent;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
   margin-bottom: 10px;
   padding-bottom: 10px;
