rutas protegidas y cuenta

--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -19,6 +19,7 @@
       <div class="d-flex" role="none">
         <!--        account-->
         <button class="btn btn-outline-light"
+                (click)="manageLinks('account')"
                 type="button">
           <i class="bi bi-person-circle"></i>
           Account
