--- a/src/styles.css
+++ b/src/styles.css
@@ -9,8 +9,8 @@ html, body {
 
 ::-webkit-scrollbar{
   color: #000000;
-  width: 0.5em;
-  height: 0.5em;
+  width: 0;
+  height: 0;
   background-color: #cdcdcd;
   overflow-style: marquee-block;
   appearance: menulist-button;
