--- a/src/app/traillers/components/carousel/carousel.component.html
+++ b/src/app/traillers/components/carousel/carousel.component.html
@@ -3,7 +3,7 @@
 
   <div class="video-carousel-container" #carouselContainer>
     <button class="carousel-btn prev-btn" (click)="prev()">
-      <i class="bi bi-arrow-bar-left"></i>
+      <i class="bi bi-arrow-left-circle-fill"></i>
     </button>
 
     <div class="video-carousel">
@@ -16,7 +16,7 @@
     </div>
 
     <button class="carousel-btn next-btn" (click)="next()">
-      <i class="bi bi-arrow-bar-right"></i>
+      <i class="bi bi-arrow-right-circle-fill"></i>
     </button>
   </div>
 </div>
