--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -17,6 +17,14 @@
         </li>
       </ul>
       <div class="d-flex" role="none">
+        <!--        Admin-->
+        <button class="btn btn-outline-light me-2"
+                *ngIf="user.isAdmin"
+                (click)="manageLinks('admin')"
+                type="button">
+          <i class="bi bi-gear"></i>
+          Admin
+        </button>
         <!--        account-->
         <button class="btn btn-outline-light"
                 (click)="manageLinks('account')"
