--- a/src/app/traillers/components/carousel/carousel.component.css
+++ b/src/app/traillers/components/carousel/carousel.component.css
@@ -15,10 +15,14 @@
   height: 50px;
   border: none;
   border-radius: 50%;
-  background-color: rgba(255, 255, 255, 0.83);
+  background-color: transparent;
   z-index: 1;
   font-size: 2rem;
   cursor: pointer;
+}
+
+.carousel-btn i{
+  color: #3a3636;
 }
 
 .prev-btn {
