--- a/src/app/traillers/pages/traillers/traillers.component.css
+++ b/src/app/traillers/pages/traillers/traillers.component.css
@@ -4,6 +4,6 @@
   border-radius: 5px;
   margin: 20px;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
-  height: 600px;
+  height: 100%;
   width: 100%;
 }
