--- a/src/app/traillers/pages/listado/listado.component.html
+++ b/src/app/traillers/pages/listado/listado.component.html
@@ -24,7 +24,7 @@
                [src]="trailer.img | safe"
                class="rounded-2 mt-2"
                [alt]="trailer.Titulo"
-               routerLink="../detail/{{trailer.id}}">
+               routerLink="../detail/{{trailer._id}}">
           <h4 class="d-flex">
             <span class="badge ">{{trailer.Titulo}}</span>
             <small class="badge text-white">{{trailer.Lanzamiento.getFullYear()}}</small>
