--- a/src/app/traillers/pages/listado/listado.component.html
+++ b/src/app/traillers/pages/listado/listado.component.html
@@ -27,7 +27,7 @@
                routerLink="../detail/{{trailer._id}}">
           <h4 class="d-flex">
             <span class="badge ">{{trailer.Titulo}}</span>
-            <small class="badge text-white">{{trailer.Lanzamiento.getFullYear()}}</small>
+            <small class="badge text-white">{{trailer.Lanzamiento}}</small>
           </h4>
         </div>
       </div>
