--- a/src/app/traillers/pages/admin/admin-list/admin-list.component.html
+++ b/src/app/traillers/pages/admin/admin-list/admin-list.component.html
@@ -19,7 +19,7 @@
              [src]="trailer.img | safe"
              class="rounded-2 mt-2"
              [alt]="trailer.Titulo"
-             routerLink="../edit-update/{{trailer._id}}">
+             routerLink="../edit/{{trailer._id}}">
         <h4 class="d-flex">
           <span class="badge ">{{trailer.Titulo}}</span>
           <small class="badge text-white">{{trailer.Lanzamiento}}</small>
