--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -19,7 +19,7 @@
       <div class="d-flex" role="none">
         <!--        Admin-->
         <button class="btn btn-outline-light me-2"
-                *ngIf="user.isAdmin"
+                *ngIf="!user.isAdmin"
                 (click)="manageLinks('admin')"
                 type="button">
           <i class="bi bi-gear"></i>
