--- a/src/app/traillers/pages/admin/agregar-editar/agregar-editar.component.html
+++ b/src/app/traillers/pages/admin/agregar-editar/agregar-editar.component.html
@@ -1,1 +1,78 @@
-<pre>{{trailer | json}}</pre>
+<div class="container-fluid my-5">
+  <div class="row">
+
+    <div class="col">
+      <img *ngIf="trailer!.img" [src]="trailer!.img | safe" class="img-fluid mt-2" alt="Preview">
+    </div>
+    <div class="col-7">
+
+      <form (ngSubmit)="submitTrailerForm()">
+
+        <div class="form-group">
+          <label for="Titulo">Título</label>
+          <input type="text"
+                 class="form-control"
+                 name="Titulo"
+                 id="Titulo"
+                 [(ngModel)]="trailer.Titulo" required>
+        </div>
+        <div class="form-group">
+          <label for="Lanzamiento">Lanzamiento</label>
+          <input type="number"
+                 formnovalidate
+                 class="form-control"
+                 name="Lanzamiento"
+                 id="Lanzamiento"
+                 [(ngModel)]="trailer!.Lanzamiento"
+                 min="1900" max="2099"
+                 required>
+        </div>
+        <div class="form-group">
+          <label for="Director_es">Director</label>
+          <input type="text"
+                 class="form-control"
+                 id="Director_es"
+                 name="Director_es"
+                 [(ngModel)]="trailer!.Director_es"
+                 required>
+        </div>
+        <div class="form-group">
+          <label for="Actores">Actores</label>
+          <textarea type="text"
+                    class="form-control"
+                    name="Actores"
+                    id="Actores"
+                    [(ngModel)]="trailer!.Actores"
+                    required></textarea>
+          <small class="form-text text-muted">Escribe los nombres de los actores separados por comas</small>
+        </div>
+        <div class="form-group">
+          <label for="img">Imagen</label>
+          <input type="text"
+                 name="img"
+                 [(ngModel)]="trailer!.img" class="form-control" id="img" >
+        </div>
+        <div class="form-group">
+          <label for="descripcion">Descripción</label>
+          <textarea class="form-control"
+                    name="descripcion"
+                    id="descripcion" rows="3" [(ngModel)]="trailer!.descripcion"
+                    required></textarea>
+        </div>
+        <div class="form-group">
+          <label for="link">Link de Youtube</label>
+          <input type="text"
+                 name="link"
+                 class="form-control" id="link" [(ngModel)]="trailer!.link" required>
+        </div>
+        <div class="form-group">
+          <label for="Categoria">Categoría</label>
+          <input type="text"
+                 name="Categoria"
+                 class="form-control" id="Categoria" [(ngModel)]="trailer!.Categoria" required>
+        </div>
+        <button type="submit" class="btn btn-primary">Agregar</button>
+      </form>
+    </div>
+  </div>
+</div>
