--- a/src/app/traillers/pages/detail/detail.component.html
+++ b/src/app/traillers/pages/detail/detail.component.html
@@ -1,2 +1,46 @@
 <app-sidebar [style]="{ 'position': 'sticky', 'width': '100%'}"></app-sidebar>
-<pre>{{trailer | json}}</pre>
+
+<div class="container my-5">
+  <div class="row">
+    <div class="col-lg-6">
+      <h2>{{trailer?.Titulo}}</h2>
+      <h6 class="text-muted">{{trailer?.Lanzamiento | date:'yyyy'}}</h6>
+      <div class="my-3">
+        <iframe width="100%" height="315"
+                [src]="trailer!.link | safe"
+                title="YouTube video player"
+                frameborder="0"
+                referrerpolicy="no-referrer"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+      </div>
+    </div>
+    <div class="col-lg-6">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Director</h5>
+          <p class="card-text">{{trailer?.Director_es}}</p>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">
+            <h5 class="card-title">Actores</h5>
+            <div class="row">
+              <div class="col-lg-6" *ngFor="let actor of trailer?.Actores; let i = index;">
+                {{actor}}
+              </div>
+            </div>
+          </li>
+          <li class="list-group-item">
+            <h5 class="card-title">Descripción</h5>
+            <p class="card-text">{{trailer?.descripcion}}</p>
+          </li>
+          <li class="list-group-item">
+            <h5 class="card-title">Categoría</h5>
+            <p class="card-text">{{trailer?.Categoria}}</p>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+
